add photo, edit index and about

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Qing Ping
 author: Qing Ping
 baseurl: /ChanningPing.github.io
-description: personal website
+description: Sentiment Analysis | Machine Learning | Information Visualization
 github: https://github.com/ChanningPing
 twitter: https://twitter.com/gaosuwoniu
 facebook: https://www.facebook.com/gaosu.woniu
