add photo, edit index and about

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Qing Ping
 author: Qing Ping
 baseurl: /ChanningPing.github.io
-description: Sentiment Analysis | Machine Learning | Information Visualization
+description: A road to truths.
 github: https://github.com/ChanningPing
 twitter: https://twitter.com/gaosuwoniu
 facebook: https://www.facebook.com/gaosu.woniu
